@startuml UC01_OpenProfile
' UC-01: Open Profile
skinparam shadowing false
skinparam packageStyle rectangle
skinparam DefaultFontName Arial
left to right direction

package "Entities Circle" as EC {
  class User
  class Address
  class Order
  class Review
}

package "Use Case Circle" as UC {
  interface InputBoundary
  interface OutputBoundary
  class ProfileService {
    +execute(req: OpenProfileRequestModel): OpenProfileResponseModel
  }
  class OpenProfileRequestModel
  class OpenProfileResponseModel

  InputBoundary <|.. ProfileService
  ProfileService ..|> OutputBoundary
}

package "Interface Adapters" as IA {
  class ProfileController {
    +getProfile(): HTTP JSON
  }
  class ProfilePresenter {
    +present(res: OpenProfileResponseModel)
  }
  class UserProfileDTO
  class AddressDTO
  class OrderSummaryDTO
  class ReviewDTO
}

package "Frameworks & Drivers" as FD {
  class "Spring Boot MVC" as Spring
  class "DB (Postgres/H2)\nJPA/Hibernate" as DB
  class "HTTP/JSON Client (Frontend)" as FE
}

' Flow
ProfileController --> InputBoundary : execute(OpenProfileRequestModel)
ProfileService --> UserRepository : load User
ProfileService --> AddressRepository : load Addresses
ProfileService --> OrderRepository : load Orders
ProfileService --> ReviewRepository : load Reviews
ProfileService --> OutputBoundary : present(OpenProfileResponseModel)
OutputBoundary <.. ProfilePresenter
ProfilePresenter --> UserProfileDTO
ProfilePresenter --> AddressDTO
ProfilePresenter --> OrderSummaryDTO
ProfilePresenter --> ReviewDTO
ProfileController <-- UserProfileDTO : HTTP JSON
ProfileController <-- AddressDTO
ProfileController <-- OrderSummaryDTO
ProfileController <-- ReviewDTO

@enduml